--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <!--<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css" />-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <title>Portofolio Web | Dharma Nala</title>
 </head>
 
 <body id="home">
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #18181B;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger shadow-sm fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Dhrmnl</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -37,17 +39,20 @@
         </div>
     </nav>
 
-    <aside>
+    < <aside>
         <section class="jumbotron text-center" id="home">
             <img src="img/idx.jpg" alt="" style="border-radius: 50%;width: 150px;">
             <h1 class="">Ida Bagus Dharma Nala</h1>
-            <p class="lead">Hello my name is Ida Bagus Dharma Nala, i am 20 years old, my hobby is playing games and
-                watching movie. I am a student at sam Ratulangi university majoring in information systems batch
+            <p class="lead">Hello my name is Ida Bagus Dharma Nala, i am 20 years old, my hobby is
+                playing games and
+                watching movie. I am a student at sam Ratulangi university majoring in information
+                systems batch
                 2020. I
                 am
                 very
                 interested in UI design, Front End Developer.
-                I studied UI Design by following the independent study program Kampus Merdeka batch 3 at hacktiv8.
+                I studied UI Design by following the independent study program Kampus Merdeka batch
+                3 at hacktiv8.
                 Thank
                 you.</p>
             <hr class="my-4">
@@ -70,107 +75,113 @@
                     class="transition-all duration-300 ease-in-out delay-150 path-0"></path>
             </svg>
         </section>
-    </aside>
+        </aside>
 
 
-    <!--Start Konten-->
-    <h1 class="text-center" id="portfolio" style="padding-top: 75px;"><b>PORTFOLIO</b></h1>
-    <div class="container" style="margin-top: 25px;">
-        <div class="row justify-content-between">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+        <!--Start Konten-->
+        <h1 class="text-center" id="portfolio" style="padding-top: 75px;"><b>PORTFOLIO</b></h1>
+        <div class="container" style="margin-top: 25px;">
+            <div class="row justify-content-between">
+                <div class="card" style="width: 18rem; margin-bottom: 12px;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make
+                            up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="card" style="width: 18rem;margin-bottom: 12px;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make
+                            up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="card" style="width: 18rem;margin-bottom: 12px;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make
+                            up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="card" style="width: 18rem;margin-bottom: 12px;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make
+                            up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!--end konten-->
+        <!--end konten-->
 
-    <!-- Contact -->
-    <section>
-        <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 400" xmlns="http://www.w3.org/2000/svg"
-            class="transition duration-300 ease-in-out delay-150">
-            <path
-                d="M 0,400 C 0,400 0,200 0,200 C 158.14285714285717,202.25 316.28571428571433,204.5 425,197 C 533.7142857142857,189.5 593,172.25 710,185 C 827,197.75 1001.7142857142858,240.5 1133,248 C 1264.2857142857142,255.5 1352.142857142857,227.75 1440,200 C 1440,200 1440,400 1440,400 Z"
-                stroke="none" stroke-width="0" fill="#18181b" fill-opacity="1" class=""></path>
-        </svg>
-        <div class="container1" id="contact">
-            <form id="contact-form" action="https://formspree.io/f/xdojdqkb" method="post">
-                <h1 class="text-center">Contact Me</h1>
-                <p class="text-center">Thank you for visiting my website. Let me know if you have anything to say</p>
-                <div class="form-group">
-                    <label for="full-name">Full Name</label>
-                    <input type="text" class="form-control" id="full-name" name="full-name">
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email">
-                </div>
-                <div class="form-group">
-                    <label for="subject">Subject</label>
-                    <input type="text" class="form-control" id="subject" name="subject">
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea name="message" type="text" class="form-control" id="message"></textarea>
-                </div>
-                <button type="submit"
-                    class="mt-4 w-full text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg">
-                    Send my message
-                </button>
-                <div class="loader ease-linear mt-5 rounded-full border-4 border-t-4 border-gray-200 h-6 w-6 mx-auto">
-                </div>
-            </form>
-        </div>
-    </section>
-    <!-- Akhir Contact -->
+        <!-- Contact -->
+        <section>
+            <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 400" xmlns="http://www.w3.org/2000/svg"
+                class="transition duration-300 ease-in-out delay-150">
+                <path
+                    d="M 0,400 C 0,400 0,200 0,200 C 158.14285714285717,202.25 316.28571428571433,204.5 425,197 C 533.7142857142857,189.5 593,172.25 710,185 C 827,197.75 1001.7142857142858,240.5 1133,248 C 1264.2857142857142,255.5 1352.142857142857,227.75 1440,200 C 1440,200 1440,400 1440,400 Z"
+                    stroke="none" stroke-width="0" fill="#18181b" fill-opacity="1" class=""></path>
+            </svg>
+            <div class="container1" id="contact">
+                <form id="contact-form" action="https://formspree.io/f/xdojdqkb" method="post">
+                    <h1 class="text-center">Contact Me</h1>
+                    <p class="text-center">Thank you for visiting my website. Let me know if you have
+                        anything to say</p>
+                    <div class="form-group">
+                        <label for="full-name">Full Name</label>
+                        <input type="text" class="form-control" id="full-name" name="full-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" name="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="subject">Subject</label>
+                        <input type="text" class="form-control" id="subject" name="subject">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea name="message" type="text" class="form-control" id="message"></textarea>
+                    </div>
+                    <button type="submit"
+                        class="mt-4 w-full text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg">
+                        Send my message
+                    </button>
+                    <div
+                        class="loader ease-linear mt-5 rounded-full border-4 border-t-4 border-gray-200 h-6 w-6 mx-auto">
+                    </div>
+                </form>
+            </div>
+        </section>
+        <!-- Akhir Contact -->
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-        crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+            integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+            crossorigin="anonymous"></script>
+        <!--<script src="js/script.js"></script>-->
 </body>
 
 
