--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
 
-    < <aside>
+     <aside>
         <section class="jumbotron text-center" id="home">
             <img src="img/idx.jpg" alt="" style="border-radius: 50%;width: 150px;">
             <h1 class="">Ida Bagus Dharma Nala</h1>
@@ -82,7 +82,7 @@
         <h1 class="text-center" id="portfolio" style="padding-top: 75px;"><b>PORTFOLIO</b></h1>
         <div class="container" style="margin-top: 25px;">
             <div class="row justify-content-between">
-                <div class="card" style="width: 18rem; margin-bottom: 12px;">
+                <div class="card" style="width: 18rem; margin-bottom: 12px; margin-left 24px">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -93,7 +93,7 @@
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;margin-bottom: 12px;">
+                <div class="card" style="width: 18rem;margin-bottom: 12px;margin-left 24px">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -104,7 +104,7 @@
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;margin-bottom: 12px;">
+                <div class="card" style="width: 18rem;margin-bottom: 12px;margin-left 24px">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -115,7 +115,7 @@
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;margin-bottom: 12px;">
+                <div class="card" style="width: 18rem;margin-bottom: 12px;margin-left 24px">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
