--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <a class="" style="margin-right: 12px;" href="mailto:idabagusnala8@gmail.com"><img src="img/gmail.png"
                         width="28px" height="28px" alt="logo mail"></a>
             </div>
-            <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 275" xmlns="http://www.w3.org/2000/svg"
+            <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 300" xmlns="http://www.w3.org/2000/svg"
                 class="transition duration-300 ease-in-out delay-150">
                 <path
                     d="M 0,400 C 0,400 0,200 0,200 C 41.57612529288447,176.54847700086324 83.15225058576894,153.0969540017265 141,148 C 198.84774941423106,142.9030459982735 272.9671229498088,156.16066099395735 335,173 C 397.0328770501912,189.83933900604265 446.9792576149956,210.2604020224442 490,217 C 533.0207423850044,223.7395979775558 569.1158465902084,216.7977309162659 620,232 C 670.8841534097916,247.2022690837341 736.5573560241708,284.5486743124923 799,265 C 861.4426439758292,245.45132568750768 920.654729313109,169.00757183376496 969,165 C 1017.345270686891,160.99242816623504 1054.8237267233937,229.4210383524479 1108,244 C 1161.1762732766063,258.5789616475521 1230.050363793316,219.30827475644347 1288,203 C 1345.949636206684,186.69172524355653 1392.974818103342,193.34586262177828 1440,200 C 1440,200 1440,400 1440,400 Z"
@@ -82,7 +82,7 @@
         <h1 class="text-center" id="portfolio" style="padding-top: 75px;"><b>PORTFOLIO</b></h1>
         <div class="container" style="margin-top: 25px;">
             <div class="row justify-content-between">
-                <div class="card" style="width: 18rem; margin-bottom: 12px; margin-left 24px">
+                <div class="card" style="width: 18rem; margin-bottom: 12px; ">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -93,7 +93,7 @@
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;margin-bottom: 12px;margin-left 24px">
+                <div class="card" style="width: 18rem;margin-bottom: 12px;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -104,7 +104,7 @@
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;margin-bottom: 12px;margin-left 24px">
+                <div class="card" style="width: 18rem;margin-bottom: 12px;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -115,7 +115,7 @@
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;margin-bottom: 12px;margin-left 24px">
+                <div class="card" style="width: 18rem;margin-bottom: 12px;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
