--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body id="home">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background: #18181b;">
         <div class="container">
             <a class="navbar-brand" href="#">Dhrmnl</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
