--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style1.css">
     <!--<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css" />-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
@@ -13,176 +13,174 @@
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <title>Portofolio Web | Dharma Nala</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
-<body id="home">
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background: #18181b;">
+<body>
+    <section class="hero" id="home">
+        <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background: rgba(0, 0, 0, 0.527);">
+            <div class="container">
+                <a class="navbar-brand" href="#">Dhrmnl</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#project">Portfolio</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
         <div class="container">
-            <a class="navbar-brand" href="#">Dhrmnl</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <div class="hero-text">
+                <h3>Hi, There!</h3>
+                <h1>I Am <span class="input"></span></h1>
+                <p>INFORMATION SYSTEM - UNIVERSITAS SAM RATULANGI MANADO.</p>
+                <div class="social">
+                    <a href="http://www.facebook.com/idanala008/"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="http://www.linkedin.com/in/idabagus083/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="http://www.instagram.com/ib_dhrmnl/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://www.youtube.com/channel/UC3IoRf7tuyNIVF-1fYCDUUw"><i
+                            class="fa-brands fa-youtube"></i></a>
+                </div>
+                <!--<button type="button">More About Me</button>-->
+            </div>
+        </div>
+    </section>
+
+    <!--ABOUT SECTION START-->
+    <section class="about" id="about">
+
+        <div class="main">
+            <img src="img/IMG-20230218-WA0000.jpg">
+            <div class="about-text">
+                <h2>About Me</h2>
+                <h5>Lorem <span>Ipsum</span></h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                    been
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                    galley
+                    of type and scrambled it to make a type specimen book.
+                </p>
+            </div>
+        </div>
+
+
+    </section>
+
+    <!--PORTFILIO SECTION START-->
+    <section class="portfolio" id="project">
+
+        <div class="title">
+            <h2>My Project List</h2>
+        </div>
+
+        <div class="box1">
+            <div class="card1">
+                <i class="fa-brands fa-figma"></i>
+                <h5>UI Design</h5>
+                <div class="pra">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the</p>
+
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="card1">
+                <i class="fa-brands fa-figma"></i>
+                <h5>UI Design</h5>
+                <div class="pra">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the</p>
+
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="card1">
+                <i class="fa-brands fa-figma"></i>
+                <h5>UI Design</h5>
+                <div class="pra">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the</p>
+
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!---FOOTER START---->
+
+    <footer>
+        <form id="contact-form" action="https://formspree.io/f/xdojdqkb" method="post">
+            <h1 class="text-center" style="padding-top: 25px;">Contact Me</h1>
+            <p class="text-center">Thank you for visiting my website. Let me know if you have
+                anything to say</p>
+            <div class="form-group">
+                <label for="full-name">Full Name</label>
+                <input type="text" class="form-control" id="full-name" name="full-name">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" name="email">
+            </div>
+            <div class="form-group">
+                <label for="subject">Subject</label>
+                <input type="text" class="form-control" id="subject" name="subject">
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea name="message" type="text" class="form-control" id="message"></textarea>
+            </div>
+            <button type="submit"
+                class="mt-4 w-full text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg">
+                Send my message
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
+            <div class="loader ease-linear mt-5 rounded-full border-4 border-t-4 border-gray-200 h-6 w-6 mx-auto">
             </div>
+        </form>
+        <P>For more info - please click on the link below. Thank You ^-^</P>
+        <div class="social2">
+            <a href="http://www.facebook.com/idanala008/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="http://www.linkedin.com/in/idabagus083/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="http://www.instagram.com/ib_dhrmnl/"><i class="fa-brands fa-instagram"></i></a>
         </div>
-    </nav>
+        <p style="font-size: 12px; opacity: 50%;">© 2023 - Ida Bagus Dharma Nala.</p>
+    </footer>
+    <script type="text/javascript" src="js/script.js"></script>
 
-     <aside>
-        <section class="jumbotron text-center" id="home">
-            <img src="img/idx.jpg" alt="" style="border-radius: 50%;width: 150px;">
-            <h1 class="">Ida Bagus Dharma Nala</h1>
-            <p class="lead">Hello my name is Ida Bagus Dharma Nala, i am 20 years old, my hobby is
-                playing games and
-                watching movie. I am a student at sam Ratulangi university majoring in information
-                systems batch
-                2020. I
-                am
-                very
-                interested in UI design, Front End Developer.
-                I studied UI Design by following the independent study program Kampus Merdeka batch
-                3 at hacktiv8.
-                Thank
-                you.</p>
-            <hr class="my-4">
-            <p>Follow Me:</p>
-            <div class="social-media-container" style="margin: 12px;">
-                <a class="" style="margin-right: 12px;" href="https://www.instagram.com/ib_dhrmnl/"><img
-                        src="img/instagram.png" width="28px" height="28px" alt="logo ig"></a>
-                <a class="" style="margin-right: 12px;" href="https://www.facebook.com/idanala008"><img
-                        src="img/facebook.png" width="28px" height="28px" alt="logo fb"></a>
-                <a class="" style="margin-right: 12px;" href="https://www.linkedin.com/in/idabagus083/"><img
-                        src="img/linkedin.png" width="28px" height="28px" alt="logo li"></a>
-                <a class="" style="margin-right: 12px;" href="mailto:idabagusnala8@gmail.com"><img src="img/gmail.png"
-                        width="28px" height="28px" alt="logo mail"></a>
-            </div>
-            <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 300" xmlns="http://www.w3.org/2000/svg"
-                class="transition duration-300 ease-in-out delay-150">
-                <path
-                    d="M 0,400 C 0,400 0,200 0,200 C 41.57612529288447,176.54847700086324 83.15225058576894,153.0969540017265 141,148 C 198.84774941423106,142.9030459982735 272.9671229498088,156.16066099395735 335,173 C 397.0328770501912,189.83933900604265 446.9792576149956,210.2604020224442 490,217 C 533.0207423850044,223.7395979775558 569.1158465902084,216.7977309162659 620,232 C 670.8841534097916,247.2022690837341 736.5573560241708,284.5486743124923 799,265 C 861.4426439758292,245.45132568750768 920.654729313109,169.00757183376496 969,165 C 1017.345270686891,160.99242816623504 1054.8237267233937,229.4210383524479 1108,244 C 1161.1762732766063,258.5789616475521 1230.050363793316,219.30827475644347 1288,203 C 1345.949636206684,186.69172524355653 1392.974818103342,193.34586262177828 1440,200 C 1440,200 1440,400 1440,400 Z"
-                    stroke="none" stroke-width="0" fill="#ffffff" fill-opacity="1"
-                    class="transition-all duration-300 ease-in-out delay-150 path-0"></path>
-            </svg>
-        </section>
-        </aside>
-
-
-        <!--Start Konten-->
-        <h1 class="text-center" id="portfolio" style="padding-top: 75px;"><b>PORTFOLIO</b></h1>
-        <div class="container" style="margin-top: 25px;">
-            <div class="row justify-content-between">
-                <div class="card" style="width: 18rem; margin-bottom: 12px; ">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make
-                            up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;margin-bottom: 12px;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make
-                            up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;margin-bottom: 12px;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make
-                            up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;margin-bottom: 12px;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make
-                            up the bulk of
-                            the
-                            card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!--end konten-->
-
-        <!-- Contact -->
-        <section>
-            <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 400" xmlns="http://www.w3.org/2000/svg"
-                class="transition duration-300 ease-in-out delay-150">
-                <path
-                    d="M 0,400 C 0,400 0,200 0,200 C 158.14285714285717,202.25 316.28571428571433,204.5 425,197 C 533.7142857142857,189.5 593,172.25 710,185 C 827,197.75 1001.7142857142858,240.5 1133,248 C 1264.2857142857142,255.5 1352.142857142857,227.75 1440,200 C 1440,200 1440,400 1440,400 Z"
-                    stroke="none" stroke-width="0" fill="#18181b" fill-opacity="1" class=""></path>
-            </svg>
-            <div class="container1" id="contact">
-                <form id="contact-form" action="https://formspree.io/f/xdojdqkb" method="post">
-                    <h1 class="text-center">Contact Me</h1>
-                    <p class="text-center">Thank you for visiting my website. Let me know if you have
-                        anything to say</p>
-                    <div class="form-group">
-                        <label for="full-name">Full Name</label>
-                        <input type="text" class="form-control" id="full-name" name="full-name">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" name="email">
-                    </div>
-                    <div class="form-group">
-                        <label for="subject">Subject</label>
-                        <input type="text" class="form-control" id="subject" name="subject">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea name="message" type="text" class="form-control" id="message"></textarea>
-                    </div>
-                    <button type="submit"
-                        class="mt-4 w-full text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg">
-                        Send my message
-                    </button>
-                    <div
-                        class="loader ease-linear mt-5 rounded-full border-4 border-t-4 border-gray-200 h-6 w-6 mx-auto">
-                    </div>
-                </form>
-            </div>
-        </section>
-        <!-- Akhir Contact -->
-
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-            integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-            crossorigin="anonymous"></script>
-        <!--<script src="js/script.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script>
+        var typed = new Typed(".input", {
+            strings: ["Ida Bagus Dharma Nala.", "UI Designer.", "Front End.", "Photographer."],
+            typeSpeed: 70,
+            backSpeed: 60,
+            loop: true
+        });
+    </script>
 </body>
-
 
 </html>
